# consoleTextEditor

./: CMakeLists.txt  Session.h  SessionManager.cpp  SessionManager.h  alice.txt  knownBugs.txt  main.cpp  penis.txt
commands/: AppendCommand.cpp  AppendCommand.h  ChangeCommand.cpp  ChangeCommand.h  Command.h  DeleteCommand.cpp  DeleteCommand.h  Print.cpp  Print.h  PrintCommand.cpp  PrintCommand.h  QuitCommand.cpp  QuitCommand.h  SubstituteCommand.cpp  SubstituteCommand.h  WriteCommand.cpp  WriteCommand.h
